switch to usermode package and use bibtex
Signed-off-by: Isabella Basso <isabbasso@riseup.net>

--- a/foss-gpgpu-stack/project.tex
+++ b/foss-gpgpu-stack/project.tex
@@ -106,7 +106,7 @@ não necessariamente sem o envolvimento de capital.
 
 O \textit{software} livre permeia todo o contexto computacional moderno, sendo
 utilizado extensivamente na internet (e.g. $\approx 80$ dos servidores utilizam
-\textit{Linux}), no contexto do desenvolvimento de \textit{software} e,
+\textit{Linux} \cite{w3techs}), no contexto do desenvolvimento de \textit{software} e,
 especialmente, na pesquisa científica.
 
 Contrastamos tal com o \textbf{\textit{software} proprietário}, onde a
@@ -196,14 +196,14 @@ aperfeiçoamento e comparações.
 
 \section{Cronograma}
 
-\begin{thebibliography}{00}
-\bibitem{b1}
-\bibitem{b2}
-\bibitem{b3}
-\bibitem{b4}
-\bibitem{b5}
-\bibitem{b6}
-\bibitem{b7}
-\end{thebibliography}
+% \begin{table}
+%     \centering
+%     \begin{tabular}{@}
+        
+%     \end{tabular}
+% \end{table}
+
+\bibliographystyle{IEEEtran}
+\bibliography{IEEEabrv,references}
 
 \end{document}
